[pom] Remove argline entirely as it does not appear needed