@@ -161,16 +161,4 @@
         </pluginManagement>
     </build>
 
-    <profiles>
-        <profile>
-            <id>jdk17on</id>
-            <activation>
-                <jdk>[17,)</jdk>
-            </activation>
-            <properties>
-                <argLine>--add-opens java.base/java.io=ALL-UNNAMED</argLine>
-            </properties>
-        </profile>
-    </profiles>
-
 </project>
